[gd_scene load_steps=2 format=2]

[ext_resource path="res://Palace/Placable/Placable.gd" type="Script" id=1]

[node name="Placable" type="Node2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]

[node name="Button" type="Button" parent="."]
margin_right = 40.0
margin_bottom = 41.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
